# NexVR-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  compile_commands.json  convert_icon.py  dummy.cpp  dummy_log.txt  vr_inject_layer.json
.agents/: project_memory.md
.github/workflows/: release.yml
.security-scans/vr-inject/: threat_model.md
.security-scans/vr-inject/aece26daa333_20260618T075504+0530/artifacts/01_context/: threat_model.md
.security-scans/vr-inject/aece26daa333_20260618T075504+0530/artifacts/02_discovery/: deep_review_input.csv  rank_input.csv
.security-scans/vr-inject/aece26daa333_20260618T075504+0530/artifacts/03_coverage/: excluded_inventory.csv
ai_matrix_classifier/: example_usage.cpp  matrix_classifier.cpp  matrix_classifier.h  model.py  train.py
cmake/cmake-4.3.3-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake/cmake-4.3.3-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake/cmake-4.3.3-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-instrumentation.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
docs/: nexvr_research_paper.md  project_memory.md
launcher/: asar-files.txt  electron-builder.config.js  gen_icon.js  index.html  inject_game.mjs  inject_hogwarts.mjs  package-lock.json  package.json  test-electron.js  test-err.html  test.js  test_tasklist.js  vite.config.ts
launcher/asar-out-2/electron-dist/electron/: main.js
launcher/asar-out-test/: electron-builder.config.js  index.html  playwright.config.ts  temp.asar  test-dev.js  test-simple.js  vite.config.ts
launcher/asar-out-test/asar-out/: package.json
launcher/asar-out-test/asar-out/electron-dist/electron/: main.js
launcher/asar-out-test/asar-test/: index.html
launcher/asar-out-test/asar-test/src/: index.css
launcher/asar-out-test/asar-test/src/components/: SessionLog.tsx  VRStatusBar.tsx
launcher/asar-out-test/dist-electron/: builder-debug.yml
launcher/asar-out-test/dist-electron/win-unpacked/locales/: es-419.pak  fa.pak  ja.pak  kn.pak  zh-CN.pak
launcher/asar-out-test/e2e/: launcher.spec.ts
launcher/asar-out-test/electron/: main.ts  preload.ts  tsconfig.json
launcher/asar-out-test/electron-dist/electron/: main.js
launcher/asar-out-test/src/: App.tsx  index.css
launcher/asar-out-test/src/components/: AboutPanel.tsx  SettingsPanel.tsx  VRStatusBar.tsx
launcher/asar-out-test/src/types/: index.ts
launcher/asar-out-test/temp_app/electron-dist/electron/: main.js
launcher/asar-out/electron-dist/electron/: preload.js
launcher/asar-test/: electron-builder.config.js  package.json
launcher/asar-test/electron/: main.ts  preload.ts  tsconfig.json
launcher/asar-test/src/: App.tsx
launcher/asar-test/src/components/: GameDetail.tsx  SettingsPanel.tsx  Sidebar.tsx
launcher/asar-test/src/types/: index.ts
launcher/assets/: ICON_REQUIRED.txt  LICENSE.txt
launcher/dist-electron/: NexVR Engine Setup 0.1.0.exe.blockmap  builder-debug.yml  builder-effective-config.yaml
launcher/dist-electron/win-unpacked/locales/: ar.pak  ca.pak  es.pak  fr.pak  he.pak  pt-BR.pak  ru.pak
launcher/dist-electron/win-unpacked/resources/app/: package.json
launcher/e2e/: launcher.spec.ts  regression-static.spec.ts
launcher/electron/: configManager.ts  diagnosticsManager.ts  injectionManager.ts  libraryManager.ts  main.ts  preload.ts  utils.ts
launcher/electron-dist/electron/: main.js  preload.js
launcher/frontend-dist/: index.html
launcher/frontend-dist/assets/: index-BGowzcBb.js  index-DBxgR5sw.css
launcher/scripts/: dev.mjs
launcher/src/: App.tsx  index.css
launcher/src/components/: AboutPanel.tsx  GameDetail.tsx  SessionLog.tsx  SettingsPanel.tsx  Sidebar.tsx  VRStatusBar.tsx
logs/: 0_build.txt
models/: matrix_classifier.onnx
scripts/: injector_loop.ps1  package_beta.ps1
shaders/: asw_shader.hlsl  bilateral_blend.hlsl  bilateral_blur.hlsl  comfort_guard_analysis.hlsl  depth_reprojection.hlsl  disocclusion_fill.hlsl  stereo_resolve.hlsl  stereo_warp.hlsl  tonemap.hlsl
src/: dllmain.cpp  test_xr.cpp
src/ai_matrix_classifier/: matrix_classifier.cpp  matrix_classifier.h
src/core/: config_manager.cpp  config_manager.h  drm_manager.cpp  drm_manager.h  engine_detector.cpp  engine_detector.h  hook_manager.cpp  hook_manager.h  logger.h  matrix_classifier.cpp  matrix_classifier.h  memory_scanner.cpp  memory_scanner.h  motion_predictor.cpp  motion_predictor.h  overlay_manager.cpp  overlay_manager.h  ue_sdk.h
src/core/engine_scanners/: unity_scanner.cpp  unity_scanner.h  universal_scanner.cpp  universal_scanner.h  unreal_scanner.cpp  unreal_scanner.h
src/hooks/: audio_hook.cpp  audio_hook.h  d3d12_hook.cpp  d3d12_hook.h  dx11_hook.cpp  dx11_hook.h  dx12_hook.cpp  dx12_hook.h  dxgi_factory_hook.cpp  dxgi_factory_hook.h  input_hook.cpp  input_hook.h  input_manager.cpp  input_manager.h  unity_hook.cpp  unity_hook.h  unreal_hook.cpp  unreal_hook.h  vulkan_layer.cpp
src/injector/: main.cpp  vr-inject-cli.manifest
src/proxy/: dxgi_proxy.cpp
src/rendering/: comfort_guard.cpp  comfort_guard.h  cross_adapter_copier.cpp  cross_adapter_copier.h  depth_reprojector.cpp  depth_reprojector.h  imgui_dx12_integration.cpp  imgui_dx12_integration.h  irenderer.h  neural_inpainter.cpp  neural_inpainter.h  openxr_manager.cpp  openxr_manager.h  stereo_pipeline.cpp  stereo_pipeline.h
src/rendering/backends/: dx11_renderer.cpp  dx11_renderer.h  dx12_renderer.cpp  dx12_renderer.h  vulkan_renderer.cpp  vulkan_renderer.h
src/rendering/shaders/: stereo_shaders.h
src/test_apps/: vk_test_app.cpp
test_app/: test_app.cpp
tools/: dummy_d3d11_app.cpp  injector.cpp  inpainter.onnx  inpainter_fp16.onnx  train_inpainter.py
(+2240 files in other folders)
